# korean-conversation-practice-fun

./: .gitignore  CLAUDE.md  README.md  active-korean-vocabulary.md  build.ts  package.json  project-brief.html  pyproject.toml  tsconfig.json
public/: index.html  style.css
server/: cache.ts  index.ts  llm.ts  mutex.ts  stt.ts
server/__tests__/: cache.test.ts
src/: app.tsx
src/components/: conversation.tsx  easy-mode-toggle.tsx  scenario-select.tsx
src/engine/: classify.ts  prompts.ts  resolve.ts  runner.ts
src/engine/__tests__/: runner.test.ts
src/korean_practice/: agent.py  main.py  stt.py
src/korean_practice/scenarios/: __init__.py  scratchpad.py  unit9_phone.py  vocab.py
src/scenarios/: index.ts  registry.ts  scratchpad.ts  unit9-phone.ts  vocab.ts
src/scenarios/__tests__/: unit9-phone.test.ts
src/utils/: audio.ts  hangul.ts  routing.ts  tts.ts
src/utils/__tests__/: audio.test.ts  hangul.test.ts  routing.test.ts
static/: app.js  index.html  style.css  utils.js  utils.test.js
tests/: test_agent.py
