[project]
name = "korean-conversation-practice"
version = "0.1.0"
description = "Korean conversation practice app using Active Korean workbooks"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "claude-agent-sdk",
    "python-multipart",
]

[project.scripts]
start = "korean_practice.main:run"

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/korean_practice"]
